[tool.poetry]
name = "pandas-usaddress"
version = "0.22.0"
description = "The usaddress library made easy with Pandas"
authors = ["Keith Lyons <lyonk71@gmail.com>, Philip Kahn <pkahn@costar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1"
usaddress = "^0.5.10"
numpy = "1.20"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
debugpy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
